# t3code

./: .gitignore  PERFORMANCE_AUDIT.md  TAURI_MIGRATION_SPEC.md  package.json
.github/workflows/: sync-upstream.yml
.plans/: 17-claude-code.md
apps/server/: package.json
apps/server/src/: main.ts  serverLayers.ts  wsServer.test.ts
apps/server/src/provider/Layers/: ProviderService.ts
apps/server/src/provider/Services/: ProviderService.ts
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/capabilities/: default.json
apps/tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  menu.rs
apps/web/: package.json
apps/web/src/: appSettings.test.ts  env.test.ts  env.ts  index.css  main.tsx  session-logic.test.ts  session-logic.ts  store.ts  tauriBridge.test.ts  tauriBridge.ts  wsNativeApi.ts
apps/web/src/components/: ChatView.tsx  DiffPanel.tsx  Sidebar.tsx
apps/web/src/routes/: _chat.index.tsx  _chat.settings.tsx
docs/plans/: 2026-03-08-claude-code-default-provider-design.md  2026-03-08-claude-code-default-provider.md
scripts/: build-tauri-artifact.ts
