[package]
name = "t3code-desktop"
version = "0.0.4-alpha.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
port_check = "0.2"
hex = "0.4"
urlencoding = "2"
dirs = "6"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
